--- a/css/centurion-ie.css
+++ b/css/centurion-ie.css
@@ -489,11 +489,11 @@ body {
   }
 
   .hide-desktop {
-    display: block;
+    display: block !important;
   }
 
   .hide-mobile {
-    display: none;
+    display: none !important;
   }
 }
 @media screen and (min-width: 601px) and (max-width: 920px) {
