--- a/sass/centurion.sass
+++ b/sass/centurion.sass
@@ -9,18 +9,6 @@
  *
  * -------------------------------------------------------- */
 
-%show-block
-  display: block
-
-%hide-block
-  display: none
-
-.hide-desktop
-  @extend %hide-block
-
-.hide-mobile
-  @extend %show-block
-  
 
 /*   GRID  */
 @include grid-generate
@@ -74,6 +62,18 @@
 @include extendables
 
 /* Print */
-@media print
-  a[href]:after
-    content: " (" attr(href) ") "
+@include print
+
+
+%show-block
+  display: block
+
+%hide-block
+  display: none
+
+.hide-desktop
+  @extend %hide-block
+
+.hide-mobile
+  @extend %show-block
+  
