minor mistake made in code with center-grid

--- a/sass/core/_grid.sass
+++ b/sass/core/_grid.sass
@@ -131,7 +131,7 @@ $lang-back: right
       .mobile-push-#{$num}
         #{$direction}: (1% * $num)
     
-    @include centerGrid
+    @include center-grid
     @include first-last
     [class*="pull-"],
     [class*="push-"]
