--- a/css/fluid.css
+++ b/css/fluid.css
@@ -1,114 +1,352 @@
-/*
-Syntax error: Undefined mixin 'centerGrid'.
-        on line 134 of /Users/jhough/Sites/GIT/Centurion-Github/sass/core/_grid.sass, in `centerGrid'
-        from line 134 of /Users/jhough/Sites/GIT/Centurion-Github/sass/core/_grid.sass, in `grid-mobile'
-        from line 171 of /Users/jhough/Sites/GIT/Centurion-Github/sass/core/_grid.sass, in `grid-generate'
-        from line 13 of /Users/jhough/Sites/GIT/Centurion-Github/sass/fluid.sass
+body {
+  font-size: 15px;
+}
 
-Backtrace:
-/Users/jhough/Sites/GIT/Centurion-Github/sass/core/_grid.sass:134:in `centerGrid'
-/Users/jhough/Sites/GIT/Centurion-Github/sass/core/_grid.sass:134:in `grid-mobile'
-/Users/jhough/Sites/GIT/Centurion-Github/sass/core/_grid.sass:171:in `grid-generate'
-/Users/jhough/Sites/GIT/Centurion-Github/sass/fluid.sass:13
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:251:in `visit_mixin'
-org/jruby/RubyKernel.java:2109:in `send'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:98:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-org/jruby/RubyArray.java:2339:in `collect'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:107:in `visit_children'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:119:in `with_environment'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:106:in `visit_children'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:318:in `visit_rule'
-org/jruby/RubyKernel.java:2109:in `send'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:98:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:266:in `visit_mixin'
-org/jruby/RubyArray.java:2339:in `collect'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:266:in `visit_mixin'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:119:in `with_environment'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:266:in `visit_mixin'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:68:in `perform_arguments'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:261:in `visit_mixin'
-org/jruby/RubyKernel.java:2109:in `send'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:98:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-org/jruby/RubyArray.java:2339:in `collect'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:107:in `visit_children'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:119:in `with_environment'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:106:in `visit_children'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:360:in `visit_media'
-org/jruby/RubyKernel.java:2109:in `send'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:98:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:266:in `visit_mixin'
-org/jruby/RubyArray.java:2339:in `collect'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:266:in `visit_mixin'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:119:in `with_environment'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:266:in `visit_mixin'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:68:in `perform_arguments'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:261:in `visit_mixin'
-org/jruby/RubyKernel.java:2109:in `send'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:98:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-org/jruby/RubyArray.java:2339:in `collect'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:107:in `visit_children'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:119:in `with_environment'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:106:in `visit_children'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:126:in `visit_root'
-org/jruby/RubyKernel.java:2109:in `send'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:98:in `visit'
-org/jruby/RubyKernel.java:2109:in `send'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/visitors/perform.rb:7:in `visit'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/tree/root_node.rb:20:in `render'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/engine.rb:315:in `_render'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_common/sass-3.2.5/lib/sass/engine.rb:262:in `render'
-file:/Applications/compass.app/Contents/Resources/Java/compass-app.jar!/compass_patch.rb:122:in `compile'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_0.12/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
-file:/Applications/compass.app/Contents/Resources/Java/compass-app.jar!/compass_patch.rb:121:in `compile'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_0.12/compass-0.12.2/lib/compass/logger.rb:45:in `red'
-file:/Applications/compass.app/Contents/Resources/Java/compass-app.jar!/compass_patch.rb:120:in `compile'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_0.12/compass-0.12.2/lib/compass/compiler.rb:118:in `compile_if_required'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_0.12/compass-0.12.2/lib/compass/compiler.rb:103:in `run'
-org/jruby/RubyArray.java:1620:in `each'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_0.12/compass-0.12.2/lib/compass/compiler.rb:101:in `run'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_0.12/compass-0.12.2/lib/compass/compiler.rb:126:in `timed'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_0.12/compass-0.12.2/lib/compass/compiler.rb:100:in `run'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_0.12/compass-0.12.2/lib/compass/commands/watch_project.rb:147:in `recompile'
-org/jruby/RubyMethod.java:133:in `call'
-org/jruby/RubyProc.java:270:in `call'
-org/jruby/RubyProc.java:220:in `call'
-/Applications/compass.app/Contents/Resources/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/path.rb:73:in `run_callback'
-/Applications/compass.app/Contents/Resources/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/path.rb:55:in `callback_action'
-/Applications/compass.app/Contents/Resources/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/path.rb:35:in `update'
-/Applications/compass.app/Contents/Resources/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/state/directory.rb:39:in `modified'
-org/jruby/RubyArray.java:1620:in `each'
-/Applications/compass.app/Contents/Resources/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/state/directory.rb:37:in `modified'
-/Applications/compass.app/Contents/Resources/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/state/directory.rb:18:in `refresh'
-/Applications/compass.app/Contents/Resources/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/backends/polling.rb:17:in `run'
-org/jruby/RubyArray.java:1620:in `each'
-/Applications/compass.app/Contents/Resources/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/backends/polling.rb:17:in `run'
-org/jruby/RubyKernel.java:1439:in `loop'
-/Applications/compass.app/Contents/Resources/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/backends/polling.rb:15:in `run'
-/Applications/compass.app/Contents/Resources/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm/monitor.rb:26:in `run'
-/Applications/compass.app/Contents/Resources/lib/ruby/jruby/fssm-0.2.9-tka-patched/lib/fssm.rb:70:in `monitor'
-file:/Applications/compass.app/Contents/Resources/Java/compass-app.jar!/compass_patch.rb:22:in `perform'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_0.12/compass-0.12.2/lib/compass/commands/base.rb:18:in `execute'
-/Applications/compass.app/Contents/Resources/lib/ruby/compass_0.12/compass-0.12.2/lib/compass/commands/project_base.rb:19:in `execute'
-file:/Applications/compass.app/Contents/Resources/Java/compass-app.jar!/ui/tray.rb:420:in `watch'
-org/jruby/RubyProc.java:270:in `call'
-org/jruby/RubyProc.java:224:in `call'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: Undefined mixin 'centerGrid'.\A         on line 134 of /Users/jhough/Sites/GIT/Centurion-Github/sass/core/_grid.sass, in `centerGrid'\A         from line 134 of /Users/jhough/Sites/GIT/Centurion-Github/sass/core/_grid.sass, in `grid-mobile'\A         from line 171 of /Users/jhough/Sites/GIT/Centurion-Github/sass/core/_grid.sass, in `grid-generate'\A         from line 13 of /Users/jhough/Sites/GIT/Centurion-Github/sass/fluid.sass"; }
+/* --------------------------------------------------------
+ *
+ *  Centurion Framework v 3.1 - FLUID
+ *  Created by: Justin Hough
+ *
+ *  Documentation: http://jhough10.github.com/Centurion/get-started.html
+ *  Licensed under GPL and MIT.
+ *
+ * -------------------------------------------------------- */
+/* Desktop/Tablet Fluid Grid Layout - 92% */
+.container {
+  width: 98%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.container [class*="grid-"] {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  float: left;
+  padding: 0 15px;
+  position: relative;
+}
+.container .alpha {
+  margin-left: 0;
+  padding-left: 0;
+}
+.container .omega {
+  margin-right: 0;
+  padding-right: 0;
+}
+.container .grid-5 {
+  width: 5%;
+}
+.container .pull-5 {
+  left: -5%;
+}
+.container .push-5 {
+  left: 5%;
+}
+.container .grid-10 {
+  width: 10%;
+}
+.container .pull-10 {
+  left: -10%;
+}
+.container .push-10 {
+  left: 10%;
+}
+.container .grid-15 {
+  width: 15%;
+}
+.container .pull-15 {
+  left: -15%;
+}
+.container .push-15 {
+  left: 15%;
+}
+.container .grid-20 {
+  width: 20%;
+}
+.container .pull-20 {
+  left: -20%;
+}
+.container .push-20 {
+  left: 20%;
+}
+.container .grid-25 {
+  width: 25%;
+}
+.container .pull-25 {
+  left: -25%;
+}
+.container .push-25 {
+  left: 25%;
+}
+.container .grid-30 {
+  width: 30%;
+}
+.container .pull-30 {
+  left: -30%;
+}
+.container .push-30 {
+  left: 30%;
+}
+.container .grid-35 {
+  width: 35%;
+}
+.container .pull-35 {
+  left: -35%;
+}
+.container .push-35 {
+  left: 35%;
+}
+.container .grid-40 {
+  width: 40%;
+}
+.container .pull-40 {
+  left: -40%;
+}
+.container .push-40 {
+  left: 40%;
+}
+.container .grid-45 {
+  width: 45%;
+}
+.container .pull-45 {
+  left: -45%;
+}
+.container .push-45 {
+  left: 45%;
+}
+.container .grid-50 {
+  width: 50%;
+}
+.container .pull-50 {
+  left: -50%;
+}
+.container .push-50 {
+  left: 50%;
+}
+.container .grid-55 {
+  width: 55%;
+}
+.container .pull-55 {
+  left: -55%;
+}
+.container .push-55 {
+  left: 55%;
+}
+.container .grid-60 {
+  width: 60%;
+}
+.container .pull-60 {
+  left: -60%;
+}
+.container .push-60 {
+  left: 60%;
+}
+.container .grid-65 {
+  width: 65%;
+}
+.container .pull-65 {
+  left: -65%;
+}
+.container .push-65 {
+  left: 65%;
+}
+.container .grid-70 {
+  width: 70%;
+}
+.container .pull-70 {
+  left: -70%;
+}
+.container .push-70 {
+  left: 70%;
+}
+.container .grid-75 {
+  width: 75%;
+}
+.container .pull-75 {
+  left: -75%;
+}
+.container .push-75 {
+  left: 75%;
+}
+.container .grid-80 {
+  width: 80%;
+}
+.container .pull-80 {
+  left: -80%;
+}
+.container .push-80 {
+  left: 80%;
+}
+.container .grid-85 {
+  width: 85%;
+}
+.container .pull-85 {
+  left: -85%;
+}
+.container .push-85 {
+  left: 85%;
+}
+.container .grid-90 {
+  width: 90%;
+}
+.container .pull-90 {
+  left: -90%;
+}
+.container .push-90 {
+  left: 90%;
+}
+.container .grid-95 {
+  width: 95%;
+}
+.container .pull-95 {
+  left: -95%;
+}
+.container .push-95 {
+  left: 95%;
+}
+.container .grid-100 {
+  width: 100%;
+}
+.container .pull-100 {
+  left: -100%;
+}
+.container .push-100 {
+  left: 100%;
+}
+.container .grid-33 {
+  width: 33.33333%;
+}
+.container .pull-33 {
+  left: -33.33333%;
+}
+.container .push-33 {
+  left: 33.33333%;
+}
+.container .grid-66 {
+  width: 66.66667%;
+}
+.container .pull-66 {
+  left: -66.66667%;
+}
+.container .push-66 {
+  left: 66.66667%;
+}
+.container .center-grid {
+  display: block;
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 200px) and (max-width: 600px) {
+  .container {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container [class*="grid-"] {
+    display: inline;
+    float: left;
+    width: 100%;
+  }
+  .container [class*="grid-"] [class*="grid-"],
+  .container [class*="grid-"] [class*="mobile-grid-"] {
+    padding: 0;
+    margin: 0;
+  }
+  .container .mobile-grid-25 {
+    width: 25%;
+  }
+  .container .mobile-pull-25 {
+    left: -25%;
+  }
+  .container .mobile-push-25 {
+    left: 25%;
+  }
+  .container .mobile-grid-50 {
+    width: 50%;
+  }
+  .container .mobile-pull-50 {
+    left: -50%;
+  }
+  .container .mobile-push-50 {
+    left: 50%;
+  }
+  .container .mobile-grid-75 {
+    width: 75%;
+  }
+  .container .mobile-pull-75 {
+    left: -75%;
+  }
+  .container .mobile-push-75 {
+    left: 75%;
+  }
+  .container .center-grid {
+    display: block;
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container .alpha {
+    margin-left: 0;
+    padding-left: 0;
+  }
+  .container .omega {
+    margin-right: 0;
+    padding-right: 0;
+  }
+  .container [class*="pull-"],
+  .container [class*="push-"] {
+    left: 0;
+  }
+
+  .hide-desktop {
+    display: block;
+  }
+
+  .hide-mobile {
+    display: none;
+  }
+}
+@media screen and (min-width: 601px) and (max-width: 920px) {
+  .container {
+    width: 98%;
+  }
+}
+@media screen and (min-width: 1120px) {
+  .container {
+    width: 1120px;
+  }
+}
+.center-grid {
+  display: block;
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Clearfix */
+.clearfix:after, .clearfix:before,
+.container:after,
+.container:before {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+  clear: both;
+  zoom: 1;
+}
+* html .clearfix, * html
+.container {
+  height: 1px;
+}
+
+.clear {
+  clear: both;
+  display: block;
+  overflow: hidden;
+  visibility: hidden;
+  width: 0;
+  height: 0;
+}
