--- a/css/demo.css
+++ b/css/demo.css
@@ -75,7 +75,7 @@ header nav ul li a:hover {
   background: url("../graphics/brick.png");
   border-bottom: 1px solid #dedede;
   margin: 0;
-  padding: 1.5em 0 0 0;
+  padding: 1.5em 0;
 }
 #tour h1 {
   color: #cc6400;
