--- a/sass/demo.sass
+++ b/sass/demo.sass
@@ -77,7 +77,7 @@ header
   background: url('../graphics/brick.png')
   border-bottom: 1px solid #DEDEDE
   margin: 0
-  padding: 1.5em 0 0 0
+  padding: 1.5em 0
   h1
     color: $rust
     font-family: 'Text Me One', sans-serif
