--- a/css/demo.css
+++ b/css/demo.css
@@ -231,20 +231,27 @@ hr.headline-line {
   top: 0;
 }
 
-code {
-  background: #ededed;
-  display: block;
-  font-size: 0.8em;
-  padding: 10px;
-  margin: 10px 0;
-}
-
+/*code
+ * background: #EDEDED
+ * display: block
+ * font-size: 0.8em
+ * padding: 10px
+ * margin: 10px 0 */
 #documentation {
   text-align: center;
 }
 #documentation h1 {
   float: left;
-  font-size: 8em;
+  text-align: left;
+  vertical-align: middle;
+}
+#documentation h1:before {
+  font-size: 4em;
+  float: left;
+  position: relative;
+  right: 0.1em;
+  top: -0.25em;
+  vertical-align: middle;
 }
 #documentation h2 {
   font-size: 1.5em;
@@ -252,7 +259,10 @@ code {
 
 @media screen and (max-width: 600px) {
   #documentation h1 {
-    font-size: 6em;
+    font-size: 1.6em;
+  }
+  #documentation h1:before {
+    font-size: 3em;
   }
   #documentation h2 {
     font-size: 1.3em;
@@ -303,6 +313,45 @@ code {
   background: #3367ff;
 }
 
+/* ICONS LIST */
+/* ============================ */
+.icon-listing {
+  margin-left: 2em;
+}
+.icon-listing li {
+  float: left;
+  line-height: 2;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 33%;
+}
+.icon-listing li span {
+  display: inline-block;
+  font-size: 1.1em;
+  padding-right: 0.5em;
+  text-align: center;
+  -webkit-transition: all 100ms ease;
+  -moz-transition: all 100ms ease;
+  transition: all 100ms ease;
+  vertical-align: center;
+}
+.icon-listing li:hover span {
+  color: #cc6400;
+  -webkit-transform: scale(2, 2);
+  -moz-transform: scale(2, 2);
+  transform: scale(2, 2);
+}
+
+@media screen and (max-width: 600px) {
+  .icon-listing {
+    margin-left: 1em;
+  }
+  .icon-listing li {
+    font-size: 0.85em;
+    width: 50%;
+  }
+}
 /* FOOTER */
 /* ============================ */
 footer {
