font-size on grid page is too large

--- a/css/demo.css
+++ b/css/demo.css
@@ -299,7 +299,7 @@ hr.headline-line {
   border: none;
   background: none;
   color: #333333;
-  font-size: 16px;
+  font-size: 1em;
   padding: 0;
   text-align: left;
 }
