--- a/sass/demo.sass
+++ b/sass/demo.sass
@@ -266,7 +266,7 @@ hr.headline-line
     border: none
     background: none
     color: $dark-grey
-    font-size: 16px
+    font-size: 1em
     padding: 0
     text-align: left
   article
