Adding -webkit-font-smoothing, removing bold from the tour H1, and beefing up the font size 1em. (Oh, yeah!)

--- a/css/demo.css
+++ b/css/demo.css
@@ -80,7 +80,9 @@ header nav ul li a:hover {
 #tour h1 {
   color: #cc6400;
   font-family: "Text Me One", sans-serif;
-  font-size: 5em;
+  font-size: 6em;
+  -webkit-font-smoothing: antialiased;
+  font-weight: normal;
   line-height: 1;
   margin-top: 0;
   text-align: center;
