cleaned up the code and pre tag styling

--- a/sass/core/_typography.sass
+++ b/sass/core/_typography.sass
@@ -29,10 +29,17 @@ body
   pre
     display: block
     line-height: 1.5
-    padding: 0.8em
+    padding: 0
     word-break: break-all
     word-wrap: break-word
     white-space: pre-wrap
+    code
+      background: #EDEDED
+      color: #333
+      display: block
+      padding: 1em
+  
+
 
 // Text
 @mixin default-list
